[metadata]
name = mayaunittest
version = attr: mayaunittest.__version__
url = https://github.com/robertjoosten/maya-unittest
author = attr: mayaunittest.__author__
author_email = attr: mayaunittest.__author_email__
description = Unittest subset for specific use in Maya.
long_description = file: README.md
license = MIT

[options]
python_requires = >= 2.7
packages = find:
include_package_data = true